refactored day2